--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # dependencies
 /node_modules
 
-# production
-/build
+# Dev
+#/build
+
+# Production
+src/*
+public/*
+build/static/css/*.map
+build/static/js/*.map
